[tool.poetry]
name = "solidworks-support-agent"
version = "2.0.0"
description = "AI-powered SolidWorks support agent using Perplexity API for real-time technical assistance"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "solidworks_agent"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
streamlit = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true